# Grupo-PD2---Transporte-NYC

./: .gitignore  README.md  config.yaml  package-lock.json  package.json  pruebas.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/services/: map_service.py  predict_service.py
config/: log4j2.properties  minio_manager.py  pipeline_runner.py  settings.py  spark_manager.py  test_spark.py
docs/: estructura.md  tabla.md  tlc_trip_data.md
docs/extraccion/: events_data.md  meteo_data.md  rent_data.md  restaurants_data.md
docs/ml/: baseline.md
docs/procesamiento/: capa1.md  capa2.md  capa3.md
docs/visualizaciones/: viz_tlc.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: nyc-zones.geojson
frontend/src/: App.jsx  main.jsx
notebooks/: ex1b_modelo_propinas.ipynb  ex1c_analisis_demanda.ipynb  ex2_gbt_regressor.ipynb  ex2_model_comparison.ipynb  ex2_neural_network.ipynb  ex2_random_forest_regressor.ipynb  ex2_xgboost.ipynb
notebooks/comparacion_A_B/: comparacion_A_B.py
notebooks/faseA/: faseA.md  faseA.py
notebooks/faseB/: faseB.py  visualizaciones_comparativas.py  visualizaciones_individuales.py  viz_01_overview.py  viz_02_hotspots.py  viz_04_tensions.py  viz_common.py
src/: descarga_datos.py  download_tlc_data.py  main.py  pipeline_runner.py
src/1-extraccion/: download_events_data.py
src/data/: download_tlc_data.py
src/extraccion/: descarga_masiva.py  download_events_data.py  download_from_minio.py  download_meteo_data.py  download_rent_data.py  download_restaurants_data.py  download_taxi_zones.py  download_tlc_data.py  main.py
src/features/: build_features.py
src/ml/: __init__.py  a_build_dataset.py  b_split_dataset.py  build_dataset.py  c_model_baseline.py  main.py  preprocess_splits.py
src/procesamiento/: main.py
src/visualizaciones/: viz_03_taxi_vs_vtc.py
(+166 files in other folders)
