[project]
name = "grupo-pd2-transporte-nyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.135.1",
    "findspark>=2.0.1",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
]
